# Multi-Tenant-AI-Platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: __init__.py  router_agent.py
app/api/: __init__.py
app/api/routes/: __init__.py  health.py  logs.py  query.py  upload.py  user.py
app/cache/: __init__.py  cache_service.py  redis_client.py
app/config/: __init__.py  dependencies.py  settings.py
app/logging/: __init__.py  context.py  formatters.py  logger.py  timing.py
app/middleware/: __init__.py  error_handler.py  request_logger.py  tenant_context.py
app/models/: __init__.py  chunk.py  document.py  exceptions.py  query_result.py
app/rag/: __init__.py  context_assembler.py  prompt_builder.py  token_utils.py
app/rag/parsers/: __init__.py  csv_parser.py  pdf_parser.py
app/repositories/: __init__.py  chroma_repository.py
app/schemas/: __init__.py  query_request.py  query_response.py  upload_request.py  upload_response.py
app/services/: __init__.py  cached_query_service.py  chunking_service.py  document_service.py  embedding_service.py  llm_service.py  query_service.py  routed_query_service.py
app/vectorstore/: __init__.py  client.py  tenant.py
docs/adr/: ADR-001-single-collection.md  ADR-002-synchronous-upload.md  ADR-003-rule-based-router.md
docs/api/: reference.md
docs/architecture/: overview.md
scripts/: backup.sh  healthcheck.sh  reingest.sh
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_health_endpoint.py  test_query_route.py  test_upload_route.py  test_user_and_misc_routes.py
tests/fixtures/: README.md  sample.csv
tests/integration/: __init__.py  test_chroma_repository.py
tests/unit/: __init__.py  test_cache_layer.py  test_chroma_repository_unit.py  test_exceptions.py  test_ingestion_pipeline.py  test_json_formatter.py  test_logging_context.py  test_rag_pipeline.py  test_request_logger_middleware.py  test_router_agent.py  test_settings.py  test_timing.py
